<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiagnosticActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="124dp">

        <TextView
            android:id="@+id/diagTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_diagnostico"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/diagNameLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/diagnostic_nombre_label" />

        <TextView
            android:id="@+id/diagNameVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/diagTypeLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diag_tipo_lbl" />

        <TextView
            android:id="@+id/diagTypeVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/diagRazeLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diag_raza_lbl" />

        <TextView
            android:id="@+id/diagRazeVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/diagAgeLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diag_edad_lbl" />

        <TextView
            android:id="@+id/diagAgeVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:duplicateParentState="false" />

        <TextView
            android:id="@+id/diagCauseLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diag_cause_lbl" />

        <TextView
            android:id="@+id/diagCauseVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:lines="5" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/diagResultLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diag_result_lbl" />

        <EditText
            android:id="@+id/diagResultVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="8"
            android:singleLine="false"
            android:autofillHints="" />

        <Button
            android:id="@+id/diagConfirmBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/registrar" />

        <Button
            android:id="@+id/diagCancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>